--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on: workflow_dispatch
 jobs:
   connect-vm:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
       
       - name: Connect to VM
