--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
           script: |
            # Navigate to the project directory
            cd /hybries/hybris/bin/platform
-           sudo -E bash -c '. ./setantenv.sh && ant clean all'
+           sudo -E bash -c '. ./setantenv.sh && ant all'
